# appbase-rs

./: .gitignore  Cargo.toml  README.md
appbase/: Cargo.toml  config.toml
appbase-macros/: Cargo.toml
appbase-macros/src/: lib.rs
appbase/examples/simple_jsonrpc/: main.rs  plugin.rs
appbase/examples/simple_jsonrpc/plugin/: heartbeat.rs  jsonrpc.rs  monitor.rs
appbase/src/: app.rs  channel.rs  lib.rs  plugin.rs  util.rs
appbase/src/app/: channels.rs  options.rs
examples/simple_jsonrpc/: main.rs  plugin.rs
examples/simple_jsonrpc/plugin/: heartbeat.rs  jsonrpc.rs  monitor.rs  template.rs
src/: app.rs  application.rs  lib.rs  main.rs  plugin.rs
src/plugin/: heartbeat.rs  jsonrpc.rs  monitor.rs  template.rs
