[package]
name = "appbase"
version = "0.1.0"
authors = ["Jeeyong Um <conr2d@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.15"
jsonrpc-core = "17.1.0"
log = "0.4.14"
mopa = "0.2.2"
once_cell = "1.8.0"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
jsonrpc-http-server = "17.1.0"

