[package]
name = "appbase"
version = "0.1.0"
authors = ["Jeeyong Um <conr2d@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.51"
futures = "0.3.15"
log = "0.4.14"
mopa = "0.2.2"
once_cell = "1.8.0"
serde_json = "1.0.66"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
env_logger = "0.9.0"
jsonrpc-core = "17.1.0"
jsonrpc-http-server = "17.1.0"

