[package]
name = "appbase"
version = "0.1.0"
authors = ["Jeeyong Um <conr2d@gmail.com>"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
appbase-macros = { path = "../appbase-macros" }
clap = "3.0.0-beta.2"
directories = "3.0.2"
downcast-rs = "1.2.0"
log = "0.4.14"
once_cell = "1.8.0"
serde = "1.0.127"
serde_json = "1.0.66"
tokio = { version = "1", features = ["full"] }
toml = "0.5.8"

[dev-dependencies]
env_logger = "0.9.0"
jsonrpc-core = "17.1.0"
jsonrpc-http-server = "17.1.0"
